--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,7 +2,7 @@
    Base
    ========================================================================== */
 
-body { }
+body {background: url(../img/gray_sand.png) repeat fixed; }
 
 
 
