header to KTM orange - add buddy press overwrites

--- a/assets/css/less/variables.less
+++ b/assets/css/less/variables.less
@@ -38,8 +38,8 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c;
-@linkColorHover:        darken(@linkColor, 15%);
+@linkColor:             #c35906;
+@linkColorHover:        lighten(@linkColor, 25%);
 
 
 // Typography
@@ -109,8 +109,8 @@
 
 // Forms
 // -------------------------
-@inputBackground:               @white;
-@inputBorder:                   #ccc;
+@inputBackground:               @grayLighter;
+@inputBorder:                   @btnWarningBackgroundHighlight;
 @inputBorderRadius:             @baseBorderRadius;
 @inputDisabledBackground:       @grayLighter;
 @formActionsBackground:         #f5f5f5;
@@ -181,13 +181,13 @@
 @navbarCollapseDesktopWidth:      @navbarCollapseWidth + 1;
 
 @navbarHeight:                    60px;
-@navbarBackgroundHighlight: 			#a00000;
+@navbarBackgroundHighlight: 			#c35906;
 @navbarBackground:                darken(@navbarBackgroundHighlight, 5%);
 @navbarBorder:                    darken(@navbarBackground, 12%);
 
-@navbarText: 											@grayLighter;
-@navbarLinkColor:                 @grayLighter;
-@navbarLinkColorHover:            @grayLight;
+@navbarText: 											@black;
+@navbarLinkColor:                 @black;
+@navbarLinkColorHover:            @white;
 @navbarLinkColorActive:           @white;
 @navbarLinkBackgroundHover:       transparent;
 @navbarLinkBackgroundActive:      darken(@navbarBackground, 5%);
