--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,6 +11,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 	border:1px solid #666;
 }
 
+
 /* =============================================================================
    Header
    ========================================================================== */
@@ -143,7 +144,7 @@ body.buddypress .page-header  {display:none;}
 #buddypress div.pagination {color:#eee;}
 #buddypress div.pagination .pag-count {margin-left:0;}
 #buddypress ul.item-list {border-top:1px solid #666;}
-#buddypress ul.item-list li {border-bottom:1px solid #666;}
+#buddypress ul.item-list li {border-bottom:1px solid #666;background: #3D3D3D;}
 #buddypress ul.item-list li div.item-title span {font-size:98%;}
 
 #buddypress div#message p {color:#BB9B36;}
@@ -184,3 +185,35 @@ body.buddypress .page-header  {display:none;}
 #buddypress div.activity-comments form input {
 	margin-top:0;
 }
+
+
+
+/* ==========================================================================
+   bbPress
+   ========================================================================== */
+
+#bbpress-forums p.bbp-topic-meta img.avatar, #bbpress-forums ul.bbp-reply-revision-log img.avatar, #bbpress-forums ul.bbp-topic-revision-log img.avatar, #bbpress-forums div.bbp-template-notice img.avatar, #bbpress-forums .widget_display_topics img.avatar, #bbpress-forums .widget_display_replies img.avatar, #bbpress-forums p.bbp-topic-meta img.avatar {
+	margin-bottom:0;
+	border:1px solid #666;
+	box-shadow: 0 0 4px rgba(0,0,0,0.5);
+}
+
+#bbpress-forums li.bbp-header { background: #272727;border-top: 0;}
+
+#bbpress-forums ul.bbp-lead-topic, #bbpress-forums ul.bbp-topics, #bbpress-forums ul.bbp-forums, #bbpress-forums ul.bbp-replies, #bbpress-forums ul.bbp-search-results, #bbpress-forums fieldset.bbp-form {
+	border:1px solid #555;
+}
+#bbpress-forums li.bbp-body ul.forum, #bbpress-forums li.bbp-body ul.topic {border-top:1px solid #555;}
+
+#bbpress-forums div.odd, #bbpress-forums ul.odd {background-color: #3D3D3D;}
+#bbpress-forums li.bbp-footer {background: #272727;border-top:1px solid #777;}
+#bbpress-forums .bbp-topic-form, #bbpress-forums .bbp-reply-form {background: #3D3D3D;}
+#bbpress-forums fieldset.bbp-form legend {border-bottom: 0;color:#eee;}
+#bbpress-forums div.even, #bbpress-forums ul.even, #bbpress-forums div.bbp-reply-header {background-color: #555;}
+#bbpress-forums div.bbp-reply-header {border-top:1px solid #777;}
+
+input#bbp_search {margin-bottom:0;}
+
+#bbpress-forums .bbp-header, #bbpress-forums .bbp-footer {color:#777;}
+
+#bbpress-forums code {white-space: pre-wrap;}
