add buddypress register override page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -183,6 +183,8 @@ body.buddypress .page-header  {display:none;}
 	margin-top:0;
 }
 
+.add-this-social-login {border-bottom:1px solid #aaa;}
+
 
 
 /* ==========================================================================
