--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -204,6 +204,8 @@ body.buddypress .page-header  {display:none;}
 }
 #bbpress-forums li.bbp-body ul.forum, #bbpress-forums li.bbp-body ul.topic {border-top:1px solid #555;}
 
+.bbp-forum-title {font-size:14px;text-shadow:1px 1px 1px #222;}
+
 #bbpress-forums div.odd, #bbpress-forums ul.odd {background-color: #3D3D3D;}
 #bbpress-forums li.bbp-footer {background: #272727;border-top:1px solid #777;}
 #bbpress-forums .bbp-topic-form, #bbpress-forums .bbp-reply-form {background: #3D3D3D;}
